fixes columns, colors, spacing, images

--- a/starter-code/src/App.css
+++ b/starter-code/src/App.css
@@ -1,21 +1,44 @@
 .App {
   margin: 1rem;
+  border: 1px;
+  padding: 50px;
   font-family: Arial, Helvetica, sans-serif;
-  background-color: blue;
 }
+
+.upperBlock {
+  padding: 50px;
+
+  background-color: rgb(31, 37, 53);
+}
+
+.menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.textInUpperBlock {
+  /* padding-right: 50%; */
+  padding: 50px 50% 50px 0px;
+  color: white;
+}
+
+.lowerBlock {
+  padding: 100px 50px;
+}
+
+#awesome {
+  padding: 10px 20px;
+  font-size: 16px;
+}
+
 .row {
   display: flex;
 }
 
 .column {
+  display: flex;
+  justify-content: left;
   flex-wrap: wrap;
-  float: left;
   width: 25%;
-}
-
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
 }
